# Libraw-Android

./: .gitignore  build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/main/ndk/Libraw_Open/jni/: Application.mk
app/src/main/ndk/Libraw_Open/jni/libraw/: Android.mk  swab.c  swab.h
app/src/main/ndk/Libraw_Open/jni/src/: configure
app/src/main/ndk/Libraw_Open/jni/src/autom4te.cache/: output.0  output.1  requests  traces.1
app/src/main/ndk/Libraw_Open/jni/src/internal/: dcraw_common.cpp  defines.h  libraw_x3f.cpp
app/src/main/ndk/Libraw_Open/jni/src/libraw/: libraw.h
app/src/main/ndk/Libraw_Open/jni/src/src/: libraw_cxx.cpp
app/src/main/ndk/Libraw_Open/jni/src/src/postprocessing/: dcraw_process.cpp
gradle/wrapper/: gradle-wrapper.properties
